--- a/src/wc-app.html
+++ b/src/wc-app.html
@@ -26,7 +26,7 @@
                     <div class="title">Slides</div>
                 </paper-toolbar>
 
-                <pgs-slide-list slides="[[slides]]" current-slide-content="{{currentSlide}}" ></pgs-slide-list>
+                <pgs-slide-list id="slideList" slides="[[slides]]" current-slide-content="{{currentSlide}}" ></pgs-slide-list>
 
                 <paper-toggle-button checked="{{showEditor}}">Show editor</paper-toggle-button>
             </div>
