--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 {
                     title: '3rd party components',
                     url: 'slides/external.md'
+                },
+                {
+                    title: 'To WC or not to WC?',
+                    url: 'slides/why.md'
                 }
             ]
         });
